--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ animatedBackgroundColor: true
 <div class="scroll-container">
   <section class="section --home-intro" id="home-intro">
     <div class="__body">
-      <p id="home-intro-p1-string" class="p1 --typed-string">In the online world, there are essentially two groups:</p>
+      <p class="p1 __typing-text-source --typed-string">In the online world, there are essentially two groups:</p>
       <div class="p1">
-        <span id="home-intro-p1"></span>
+        <span class="__typing-text-target"></span>
       </div>
       <div>
         <p class="p2 hidden-copy --hidden">Those who generate data.</p>
@@ -23,9 +23,9 @@ animatedBackgroundColor: true
 
   <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="flowing">
     <div class="__body">
-      <p id="home-privacy-platform-p2-string" class="p2 --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
-      <div class="__typing-text-target">
-        <p class="p2" id="home-privacy-platform-p2"></p>
+      <p class="p2 __typing-text-source --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
+      <div>
+        <p class="p2 __typing-text-target"></p>
         <p>&nbsp;</p>
       </div>
       <p class="p1 hidden-copy --hidden">
@@ -61,17 +61,22 @@ animatedBackgroundColor: true
 
   <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you" data-video-name="flowing">
     <div class="__body">
-      <p class="p2">Your Data Belongs to You.</p>
-      <p class="p1">
-        Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
+      <p class="p2 __typing-text-source --typed-string">Your Data Belongs to You.</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
       </p>
-      <p class="p3 --underline --caps">You Own Your Data</p>
-      <p class="p3">River helps you manage and make money from your data.</p>
-      <ul class="p1 --no-vmargin">
-        <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
-        <li>River also helps enterprises and organizations comply with global laws designed to protect your privacy. River provides businesses the valuable compliance tools they require.</li>
-        <li>Our model is simple: you choose the data you want to share; we provide a marketplace for you to sell it.</li>
-      </ul>
+      <div class="hidden-copy --hidden">
+        <p class="p1">
+          Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
+        </p>
+        <p class="p3 --underline --caps">You Own Your Data</p>
+        <p class="p3">River helps you manage and make money from your data.</p>
+        <ul class="p1 --no-vmargin">
+          <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
+          <li>River also helps enterprises and organizations comply with global laws designed to protect your privacy. River provides businesses the valuable compliance tools they require.</li>
+          <li>Our model is simple: you choose the data you want to share; we provide a marketplace for you to sell it.</li>
+        </ul>
+        </div>
     </div>
 
     {% include breadcrumb.html teaser="Dive into <br /> Your Data" %}
@@ -80,8 +85,11 @@ animatedBackgroundColor: true
 
   <section class="section --home-river-gives-you-control" id="home-river-gives-you-control" data-video-name="flowing">
     <div class="__body">
-      <p class="p2">If the service is free, you are the product</p>
-      <div class="col2">
+      <p class="p2 __typing-text-source --typed-string">If the service is free, you are the product</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
+      <div class="col2 hidden-copy --hidden">
         <p class="p1">
           Websites and businesses collect volumes of data about you and your family, all day, every day. Information like how you slept last night,
           how many pounds you gained over the holidays, where you like to shop, which games you like to play,
@@ -101,9 +109,12 @@ animatedBackgroundColor: true
 
     <section class="section --home-privacy-platform-2" id="home-privacy-platform-2" data-video-name="flowing">
     <div class="__body">
-      <p class="p2">A privacy platform you'll want to use.</p>
-      <p class="p3">Imagine:</p>
-      <div class="flex-col2">
+      <p class="p2 __typing-text-source --typed-string">A privacy platform you'll want to use.</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
+      <p class="p3 hidden-copy --hidden">Imagine:</p>
+      <div class="flex-col2 hidden-copy --hidden --delay-1">
         <ul class="p1 --no-vmargin">
           <li>
             <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
@@ -138,9 +149,12 @@ animatedBackgroundColor: true
 
   <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
     <div class="__body">
-      <p class="p2">Who is using your data?</p>
+      <p class="p2 __typing-text-source --typed-string">Who is using your data?</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
 
-      <div class="col3">
+      <div class="col3 hidden-copy --hidden">
         <div class="__card">
           <p class="p3">Who's tracking you now?</p>
           <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
@@ -178,9 +192,12 @@ animatedBackgroundColor: true
 
   <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
     <div class="__body">
-      <p class="p2">Who is using your data?</p>
+      <p class="p2 __typing-text-source --typed-string">Who is using your data?</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
 
-      <div class="col3">
+      <div class="col3 hidden-copy --hidden">
         <div class="__card">
           <p class="p3">What can I do with my data?</p>
           <p class="p4 --no-vmargin">You Have Options</p>
@@ -206,9 +223,12 @@ animatedBackgroundColor: true
 
   <section class="section --home-working-with-big-tech" id="home-working-with-big-tech" data-video-name="creek">
     <div class="__body">
-      <p class="p2">Working with Deep Tech, not against them.</p>
+      <p class="p2 __typing-text-source --typed-string">Working with Deep Tech, not against them.</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
 
-      <ul class="p1">
+      <ul class="p1 hidden-copy --hidden">
         <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers</li>
         <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
           app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
@@ -241,7 +261,11 @@ animatedBackgroundColor: true
 
   <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-name="rough">
     <div class="__body">
-      <p class="p2">The Business of River.</p>
+      <p class="p2  __typing-text-source --typed-string">The Business of River.</p>
+      <p class="p2">
+        <span class="__typing-text-target"></span>
+      </p>
+
       <div class="col3">
         <div class="__card">
           <p class="p3">A firewall for your data</p>
