Streams + Riverbank updates per design review PDF

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 # index.html
 title: River
 layout: default
+lineDrawing: true
 videos: { rough: true, flowing: true, creek: true }
 animatedBackgroundColor: true
 ---
