--- a/riverbank.html
+++ b/riverbank.html
@@ -2,7 +2,8 @@
 # riverbank.html
 title: Riverbank
 layout: default
-videos: { smooth: true }
+videos: { creek: true }
+lineDrawing: false
 initialSection: "riverbank"
 ---
 
@@ -34,6 +35,14 @@ initialSection: "riverbank"
     </div>
 
     <div class="__images">
+      <img
+        src="{{ site.baseurl }}/assets/img/riverbank-1.jpg"
+        alt="Riverbank"
+      />
+      <img
+        src="{{ site.baseurl }}/assets/img/riverbank-1.jpg"
+        alt="Riverbank"
+      />
       <img
         src="{{ site.baseurl }}/assets/img/riverbank-1.jpg"
         alt="Riverbank"
