--- a/streams.html
+++ b/streams.html
@@ -2,7 +2,8 @@
 # streams.html
 title: Riverbank
 layout: default
-videos: { flowing: true }
+videos: { creek: true }
+lineDrawing: false
 initialSection: "streams"
 ---
 
@@ -49,6 +50,8 @@ initialSection: "streams"
     </div>
 
     <div class="__images">
+      <img src="{{ site.baseurl }}/assets/img/streams-1.jpg" alt="Riverbank" />
+      <img src="{{ site.baseurl }}/assets/img/streams-1.jpg" alt="Riverbank" />
       <img src="{{ site.baseurl }}/assets/img/streams-1.jpg" alt="Riverbank" />
     </div>
   </div>
