--- a/style_guide.html
+++ b/style_guide.html
@@ -34,4 +34,16 @@ layout: default
       eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </p>
   </div>
+
+  <div class="__colors">
+    <p class="overlay --feathered-gray-blue">--feathered-gray-blue</p>
+    <p class="overlay --dark-blue">--dark-blue</p>
+    <p class="overlay --dark-blue-inv">--dark-blue-inv</p>
+    <p class="overlay --gray-blue">--gray-blue</p>
+    <p class="overlay --blue-blue">--blue-blue</p>
+    <p class="overlay --blue-blue-2">--blue-blue-2</p>
+    <p class="overlay --creek">--creek</p>
+    <p class="overlay --riverbank">--riverbank</p>
+    <p class="overlay --streams">--streams</p>
+  </div>
 </section>
