Header tweaks, riverbank+streams get correct icons + images.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@ animatedBackgroundColor: true
   <section class="section --home-intro" id="home-intro">
     <div class="__body">
       <p class="p1 __typing-text-source --typed-string">In the online world, there are essentially two groups:</p>
-      <div class="p1">
+      <div class="p1 --no-vmargin">
         <span class="__typing-text-target"></span>
       </div>
       <div>
-        <p class="p2 hidden-copy --hidden">Those who generate data.</p>
-        <p class="p2 hidden-copy --hidden --delay-0-5 --center">and</p>
-        <p class="p2 hidden-copy --hidden --delay-1">Those who profit from it.</p>
-        <p class="p2 hidden-copy --hidden --delay-2">River brings value to both.</p>
+        <p class="p2 hidden-copy --no-vmargin --hidden">Those who generate data and those who profit from it.</p>
+        <p class="p2 hidden-copy --no-vmargin --hidden --delay-1">River brings value to both.</p>
       </div>
     </div>
   </section>
