More RiverBank updates. Drop new video file in, change gradient, update "gallery" position

--- a/riverbank.html
+++ b/riverbank.html
@@ -2,12 +2,12 @@
 # riverbank.html
 title: Riverbank
 layout: default
-videos: { creek: true }
+videos: { jungle: true }
 lineDrawing: false
 initialSection: "riverbank"
 ---
 
-<section class="section --riverbank" id="riverbank" data-video-name="smooth">
+<section class="section --riverbank" id="riverbank" data-video-name="jungle">
   <div class="__copy">
     <p class="p2">RiverBank</p>
     <p class="p4">Get paid for your data.</p>
