Revise hidden text appearance; page 3 gradient

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </div>
       <div>
-        <p class="p2 hidden-copy --no-vmargin --hidden">Those who generate data and those who profit from it.</p>
-        <p class="p2 hidden-copy --no-vmargin --hidden --delay-1">River brings value to both.</p>
+        <p class="p2 hidden-copy --no-vmargin">Those who generate data and those who profit from it.</p>
+        <p class="p2 hidden-copy --no-vmargin --delay-1">River brings value to both.</p>
       </div>
     </div>
   </section>
@@ -27,7 +27,7 @@ animatedBackgroundColor: true
         <p class="p2 --no-vmargin __typing-text-target"></p>
         <p>&nbsp;</p>
       </div>
-      <p class="p1 --no-vmargin hidden-copy --hidden">
+      <p class="p1 --no-vmargin hidden-copy">
         River gives you:
         <br />
         <span class="p3">Privacy</span> &mdash; control who, what, when, and where your data can be used.
@@ -43,7 +43,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button hidden-copy --hidden-left">
+      <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
         <div>
@@ -53,7 +53,7 @@ animatedBackgroundColor: true
           <p>&nbsp;</p>
         </div>
         
-        <p class="p1 --no-vmargin hidden-copy --hidden">
+        <p class="p1 --no-vmargin hidden-copy">
           River gives you the ability to control where your data is being used,
           when it's being used, and who has access to it. It's your data.
         </p>
@@ -69,7 +69,7 @@ animatedBackgroundColor: true
       <p class="p2">
         <span class="__typing-text-target"></span>
       </p>
-      <div class="hidden-copy --hidden">
+      <div class="hidden-copy">
         <p class="p1">
           Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
         </p>
@@ -93,7 +93,7 @@ animatedBackgroundColor: true
       <p class="p2">
         <span class="__typing-text-target"></span>
       </p>
-      <div class="col2 hidden-copy --hidden">
+      <div class="col2 hidden-copy">
         <p class="p1">
           Websites and businesses collect volumes of data about you and your family, all day, every day. Information like how you slept last night,
           how many pounds you gained over the holidays, where you like to shop, which games you like to play,
@@ -117,8 +117,8 @@ animatedBackgroundColor: true
       <p class="p2">
         <span class="__typing-text-target"></span>
       </p>
-      <p class="p3 hidden-copy --hidden">Imagine:</p>
-      <div class="flex-col2 hidden-copy --hidden --delay-1">
+      <p class="p3 hidden-copy">Imagine:</p>
+      <div class="flex-col2 hidden-copy --delay-1">
         <ul class="p1 --no-vmargin">
           <li>
             <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
@@ -158,7 +158,7 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </p>
 
-      <div class="col3 hidden-copy --hidden">
+      <div class="col3 hidden-copy">
         <div class="__card">
           <p class="p3">Who's tracking you now?</p>
           <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
@@ -201,7 +201,7 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </p>
 
-      <div class="col3 hidden-copy --hidden">
+      <div class="col3 hidden-copy">
         <div class="__card">
           <p class="p3">What can I do with my data?</p>
           <p class="p4 --no-vmargin">You Have Options</p>
@@ -232,7 +232,7 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </p>
 
-      <ul class="p1 hidden-copy --hidden">
+      <ul class="p1 hidden-copy">
         <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers</li>
         <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
           app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
