--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@ animatedBackgroundColor: true
       <p class="p2 __typing-text-source --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
       <div>
         <p class="p2 --no-vmargin __typing-text-target"></p>
-        <p>&nbsp;</p>
       </div>
-      <p class="p1 --no-vmargin hidden-copy">
+      <p class="p1 hidden-copy">
         River gives you:
         <br />
         <span class="p3">Privacy</span> &mdash; control who, what, when, and where your data can be used.
