Loosely through slide 9

--- a/index.html
+++ b/index.html
@@ -189,18 +189,13 @@ animatedBackgroundColor: true
         </div>
       </div>
     </div>
-
-    {% include breadcrumb.html teaser="Control <br /> Your Data" %}
   </section>
 
   <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
     <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">Who is using your data?</p>
-      <p class="p2">
-        <span class="__typing-text-target"></span>
-      </p>
-
-      <div class="col3 hidden-copy">
+      <p class="p2">Who is using your data?</p>
+      
+      <div class="flex-col3 hidden-copy --right">
         <div class="__card">
           <p class="p3">What can I do with my data?</p>
           <p class="p4 --no-vmargin">You Have Options</p>
@@ -209,19 +204,17 @@ animatedBackgroundColor: true
           </p>
         </div>
 
-        <div class="__card">
+        <div class="__card --col2">
           <p class="p3">Wait – I own my data? What does that mean?</p>
           <p class="p4 --no-vmargin">100% Yours</p>
           <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
           </p>
         </div>
-
-        <div class="__card">&nbsp;</div>
       </div>
     </div>
 
-    {% include breadcrumb.html teaser="River Enables <br /> Compliance" %}
+    {% include breadcrumb.html teaser="Control <br /> Your Data" %}
   </section>
 
   <section class="section --home-working-with-big-tech" id="home-working-with-big-tech" data-video-name="creek">
