Add cool fade effects to all video players, tweak some gradients.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@ animatedBackgroundColor: true
         <div>
           <p class="p2 __typing-text-source --typed-string">You create $data$ every day.</p>
           <div>
-          <p class="p2 --no-vmargin __typing-text-target"></p>
-          <p>&nbsp;</p>
-        </div>
+            <p class="p2 --no-vmargin __typing-text-target"></p>
+          </div>
         
-        <p class="p1 --no-vmargin hidden-copy">
-          River gives you the ability to control where your data is being used,
-          when it's being used, and who has access to it. It's your data.
-        </p>
+          <p class="p1 hidden-copy">
+            River gives you the ability to control where your data is being used,
+            when it's being used, and who has access to it. It's your data.
+          </p>
       </div>
     </div>
 
@@ -239,12 +238,19 @@ animatedBackgroundColor: true
 
   <section class="section --home-data-untapped" id="home-data-untapped">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-2'); return false;" class="play-video-button __video-button">
+      <button onclick="river.showVideo('video-2'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
       <div>
-        <p class="p2">Data Untapped.</p>
-        <p class="p1">
+        <div>
+          <p class="p2 __typing-text-source --typed-string">Data Untapped.</p>
+          <div>
+              <p class="p2 --no-vmargin __typing-text-target"></p>
+              <p>&nbsp;</p>
+          </div>
+        </div>
+
+        <p class="p1 --no-vmargin hidden-copy">
           A high-level explanation of how River isolates your data: giving you the
           power to control the info you're sharing while enabling developers to be
           compliant in the apps and tools they're creating.
@@ -294,12 +300,18 @@ animatedBackgroundColor: true
 
   <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button">
+      <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
       <div>
-        <p class="p2">The Business of Data</p>
-        <p class="p1 __p1">
+        <div>
+          <p class="p2 __typing-text-source --typed-string">The Business of Data</p>
+          <div>
+            <p class="p2 --no-vmargin __typing-text-target"></p>
+            <p>&nbsp;</p>
+          </div>
+        </div>
+        <p class="p1 __p1 --no-vmargin hidden-copy">
           How does River profit from your data? Here's your fully transparent
           process, designed to protect you and your digital assets.
         </p>
