--- a/streams.html
+++ b/streams.html
@@ -2,37 +2,35 @@
 # streams.html
 title: Riverbank
 layout: default
-videos: { creek: true }
+videos: { rough: true }
 lineDrawing: false
 initialSection: "streams"
 ---
 
-<section class="section --streams" id="streams" data-video-name="flowing">
+<section class="section --streams" id="streams" data-video-name="rough">
   <div class="__copy">
     <p class="p2">StreamS.</p>
     <p class="p4">Social Media should be secure and beautiful.</p>
     <ul>
       <li class="p1">
-        StreamS, River's social media platform, enables you to share your
-        data, your way. When you have control over your data, you get to
-        choose who can see it, how they use it, and for how long they get to
-        access it.
+        StreamS, River's social media platform, enables you to share your data,
+        your way. When you have control over your data, you get to choose who
+        can see it, how they use it, and for how long they get to access it.
       </li>
 
       <li class="p1">
         <p class="p1">
-          StreamS helps you share the absolute bare minimum required to
-          process an application, sign up for a service, or buy a product
-          online.
+          StreamS helps you share the absolute bare minimum required to process
+          an application, sign up for a service, or buy a product online.
         </p>
 
         <p class="p4 --no-vmargin">Example:</p>
         <p class="__example p1 --no-vmargin">
-          Get paid for your likes and shares without compromising your
-          security or identity. Or when you're asked for your ID, they only
-          need to see the ID – not your full address. Or when you are applying
-          for credit, River lets you share only the information relevant to
-          your application – not everything else about you.
+          Get paid for your likes and shares without compromising your security
+          or identity. Or when you're asked for your ID, they only need to see
+          the ID – not your full address. Or when you are applying for credit,
+          River lets you share only the information relevant to your application
+          – not everything else about you.
         </p>
       </li>
 
@@ -42,8 +40,8 @@ initialSection: "streams"
         information you want to share.
       </li>
       <li class="p1">
-        The possibilities are endless, and there's no wrong way to safely
-        share your data.
+        The possibilities are endless, and there's no wrong way to safely share
+        your data.
       </li>
     </ul>
   </div>
