Add click-to-skip transitions

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </div>
       <div>
-        <p class="p2 hidden-copy --no-vmargin">Those who generate data and those who profit from it.</p>
-        <p class="p2 hidden-copy --no-vmargin --delay-1">River brings value to both.</p>
+        <p class="p2 hidden-copy --no-vmargin transition">Those who generate data and those who profit from it.</p>
+        <p class="p2 hidden-copy --no-vmargin --delay-1 transition">River brings value to both.</p>
       </div>
     </div>
   </section>
@@ -26,7 +26,7 @@ animatedBackgroundColor: true
       <div>
         <p class="p2 --no-vmargin __typing-text-target"></p>
       </div>
-      <p class="p1 hidden-copy">
+      <p class="p1 hidden-copy transition">
         River gives you:
         <br />
         <span class="p3">Privacy</span> &mdash; control who, what, when, and where your data can be used.
@@ -268,7 +268,7 @@ animatedBackgroundColor: true
         <span class="__typing-text-target"></span>
       </p>
 
-      <div class="col3">
+      <div class="col3 hidden-copy">
         <div class="__card">
           <p class="p3">A firewall for your data</p>
           <p class="p1">
