Better video loading

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ animatedBackgroundColor: true
     {% include breadcrumb.html teaser="Socialize Your Data" %}
   </section>
 
-  <section class="section --home-resources" id="home-resources">
+  <section class="section --home-resources" id="home-resources" data-video-name="rough">
     <div class="__body">
       <div class="col2">
         <div class="__card">
