--- a/riverbank.html
+++ b/riverbank.html
@@ -13,8 +13,8 @@ initialSection: "riverbank"
     <p class="p4">Get paid for your data.</p>
     <ul>
       <li class="p1">
-        Your data is a new asset class – like your bank account. Your car.
-        Your house. Your ten-season box set of Friends.
+        Your data is a new asset class – like your bank account. Your car. Your
+        house. Your ten-season box set of Friends.
       </li>
 
       <li class="p1">
@@ -27,24 +27,15 @@ initialSection: "riverbank"
         Convert your data – only the parts you want to sell – into real money.
       </li>
       <li class="p1">
-        The possibilities are endless, and there's no wrong way to safely
-        share your data.
+        The possibilities are endless, and there's no wrong way to safely share
+        your data.
       </li>
     </ul>
   </div>
 
   <div class="__images">
-    <img
-      src="{{ site.baseurl }}/assets/img/riverbank-1.jpg"
-      alt="Riverbank"
-    />
-    <img
-      src="{{ site.baseurl }}/assets/img/riverbank-2.jpg"
-      alt="Riverbank"
-    />
-    <img
-      src="{{ site.baseurl }}/assets/img/riverbank-3.jpg"
-      alt="Riverbank"
-    />
+    <img src="{{ site.baseurl }}/assets/img/riverbank-1.jpg" alt="Riverbank" />
+    <img src="{{ site.baseurl }}/assets/img/riverbank-2.jpg" alt="Riverbank" />
+    <img src="{{ site.baseurl }}/assets/img/riverbank-3.jpg" alt="Riverbank" />
   </div>
 </section>
