Final edits for Weds

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ animatedBackgroundColor: true
         <p class="p1">
           Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you need to keep private. 
         </p>
-        <p class="button --yellow-fill --caps">Stop giving away your data – sign up for river</p>
+        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps">Stop giving away your data – sign up for river</a>
       </div>
     </div>
 
@@ -141,7 +141,10 @@ animatedBackgroundColor: true
           <p class="p1">
             <span class="p3">RiverBank</span> gives you the liquidity and security of a bank account while connecting you to a marketplace of business and organizations willing to pay for the data you create.
           </p>
-          <p class="button --orange-fill --caps">Sign up to be a privacy pioneer</p>
+
+          <div class="p1">
+            <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign Up for River" class="button --orange-fill --caps">Sign up to be a privacy pioneer</a>
+            </div>
         </div>
       </div>
     </div>
@@ -194,8 +197,8 @@ animatedBackgroundColor: true
     <div class="__body">
       <p class="p2">Who is using your data?</p>
       
-      <div class="flex-col3 hidden-copy --right">
-        <div class="__card">
+      <div class="flex-col3">
+        <div class="__card hidden-copy --right">
           <p class="p3">What can I do with my data?</p>
           <p class="p4 --no-vmargin">You Have Options</p>
           <p class="p1 --no-vmargin">
@@ -203,9 +206,9 @@ animatedBackgroundColor: true
           </p>
         </div>
 
-        <div class="__card --col2">
+        <div class="__card --col2 hidden-copy">
           <p class="p3">Wait – I own my data? What does that mean?</p>
-          <p class="p4 --no-vmargin">100% Yours</p>
+          <p class="p4 --no-vmargin --right">100% Yours</p>
           <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
           </p>
@@ -336,7 +339,9 @@ animatedBackgroundColor: true
           <p class="p1">Ready to start getting paid for your data?</p>
           <p class="p1">Stay informed about the updates and activities at River.</p>
           <p class="p1">It's your data. It's your choice.</p>
-          <p class="button --yellow-fill">Sign up to be an early adopter</p>
+          <p>
+            <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill">Sign up to be an early adopter</a>
+          </p>
           <p class="p1">Still have questions? Let's chat.</p>
         </div>
         <div class="__card">
