--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@ animatedBackgroundColor: true
           </p>
         </div>
 
-        <div class="__card --col2 hidden-copy">
+        <div class="__card --col2 hidden-copy --right">
           <p class="p3">Wait – I own my data? What does that mean?</p>
-          <p class="p4 --no-vmargin --right">100% Yours</p>
+          <p class="p4 --no-vmargin">100% Yours</p>
           <p class="p1 --no-vmargin">
             The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
           </p>
