--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ animatedBackgroundColor: true
         <p class="p1">
           Big tech, traditional advertisers, and app developers – everyone is changing how they collect data to reflect new laws around the world:
         </p>
-        <p class="p3 --underline --caps">You Own Your Data</p>
+        <p class="p3 --caps">You Own <span class="p3 --underline">Your</span> Data</p>
         <p class="p3">River helps you manage and make money from your data.</p>
         <ul class="p1 --no-vmargin">
           <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
@@ -100,7 +100,7 @@ animatedBackgroundColor: true
           and organizations to influence your decisions, like buying a product or casting a vote.
         </p>
         <p class="p1">
-          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you need to keep private. 
+          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you want to keep private. 
         </p>
         <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps">Stop giving away your data – sign up for river</a>
       </div>
@@ -227,10 +227,10 @@ animatedBackgroundColor: true
       </p>
 
       <ul class="p1 hidden-copy">
-        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers</li>
+        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers.</li>
         <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
           app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
-          Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without touching the rest of the data being generated.
+          Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without accessing the rest of the data being generated.
         </li>
         <li class="p1">Fine-grain permissioning keeps your data secure, while POLA enables you to choose who can see the slice of data you want to share with them.</li>
       </ul>
@@ -276,8 +276,8 @@ animatedBackgroundColor: true
           <p class="p3">A firewall for your data</p>
           <p class="p1">
             You choose what data you'd like to send to market, including how long it
-            will be available for, which industries can access your data, and what
-            it can be used for.
+            will be available, which industries can access your data, and how
+            it can be used.
           </p>
         </div>
         <div class="__card">
@@ -290,7 +290,7 @@ animatedBackgroundColor: true
         <div class="__card">
           <p class="p3">Future plans</p>
           <p class="p1">
-            Everyone creates data, but ont everyone wants to share it, so in the
+            Everyone creates data, but not everyone wants to share it, so in the
             future, we'll offer a premium service that allows you to access the
             services you want without sharing your information.
           </p>
@@ -315,7 +315,7 @@ animatedBackgroundColor: true
           </div>
         </div>
         <p class="p1 __p1 --no-vmargin hidden-copy">
-          How does River profit from your data? Here's your fully transparent
+          How does River profit from your data? Here's our fully transparent
           process, designed to protect you and your digital assets.
         </p>
       </div>
