--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-1'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
+      <button onclick="river.showVideo('569965792'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
         <div>
@@ -241,7 +241,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-data-untapped" id="home-data-untapped">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-2'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
+      <button onclick="river.showVideo('569965792'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
       <div>
@@ -303,7 +303,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
     <div class="__body --with-video-button">
-      <button onclick="river.showVideo('video-3'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
+      <button onclick="river.showVideo('569965792'); return false;" class="play-video-button __video-button hidden-copy --left --delay-1">
         {% include play_button.svg %}
       </button>
       <div>
