About, Signup, Riverbank/Streams touchups

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-river-gives-you-control" id="home-river-gives-you-control" data-video-name="flowing">
     <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">If the service is free, you are the product</p>
+      <p class="p2 __typing-text-source --typed-string">If the service is free, you are probably the product</p>
       <p class="p2">
         <span class="__typing-text-target"></span>
       </p>
@@ -345,16 +345,9 @@ animatedBackgroundColor: true
           <p class="p1">Still have questions? Let's chat.</p>
         </div>
         <div class="__card">
-          <p class="p3 --yellow">LEGALS</p>
-          <p class="p1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum.
-          </p>
+          <p class="p3 --yellow">Team</p>
+          <p class="p3 --yellow">Press</p>
+          <p class="p3 --yellow">Legal</p>
         </div>
     </div>
   </section>
