--- a/riverbank.html
+++ b/riverbank.html
@@ -38,7 +38,10 @@ initialSection: "riverbank"
       src="{{ site.baseurl }}/assets/img/riverbank-1-16-9.jpg"
       alt="Riverbank"
     />
-    <img src="{{ site.baseurl }}/assets/img/riverbank-2.jpg" alt="Riverbank" />
+    <img
+      src="{{ site.baseurl }}/assets/img/riverbank-2-16-9.jpg"
+      alt="Riverbank"
+    />
     <img src="{{ site.baseurl }}/assets/img/riverbank-3.jpg" alt="Riverbank" />
   </div>
 </section>
