--- a/riverbank.html
+++ b/riverbank.html
@@ -2,12 +2,12 @@
 # riverbank.html
 title: Riverbank
 layout: default
-videos: { jungle: true }
+videos: { waterfall: true }
 lineDrawing: false
 initialSection: "riverbank"
 ---
 
-<section class="section --riverbank" id="riverbank" data-video-name="jungle">
+<section class="section --riverbank" id="riverbank" data-video-name="waterfall">
   <div class="__copy">
     <p class="p2">RiverBank</p>
     <p class="p4">Get paid for your data.</p>
