--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ animatedBackgroundColor: true
         <p class="p1">
           Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you want to keep private. 
         </p>
-        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps">Stop giving away your data – sign up for river</a>
+        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps --block">Stop giving away your data – sign up for river</a>
       </div>
     </div>
 
