--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ animatedBackgroundColor: true
     {% include breadcrumb.html teaser="Make Data <br /> Work <br /> for You." %}
   </section>
 
-  <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you" data-video-name="flowing">
+  <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you">
     <div class="__body">
       <p class="p2 __typing-text-source --typed-string">Your Data Belongs to You.</p>
       <p class="p2">
@@ -85,7 +85,7 @@ animatedBackgroundColor: true
   </section>
 
 
-  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control" data-video-name="flowing">
+  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control">
     <div class="__body">
       <p class="p2 __typing-text-source --typed-string">If the service is free, you are probably the product</p>
       <p class="p2">
@@ -109,7 +109,7 @@ animatedBackgroundColor: true
     {% include breadcrumb.html teaser="Get Paid for <br /> Your Data" %}
   </section>
 
-    <section class="section --home-privacy-platform-2" id="home-privacy-platform-2" data-video-name="flowing">
+    <section class="section --home-privacy-platform-2" id="home-privacy-platform-2">
     <div class="__body">
       <p class="p2 __typing-text-source --typed-string">A privacy platform you'll want to use.</p>
       <p class="p2">
