Style signup page.

--- a/signup.html
+++ b/signup.html
@@ -26,17 +26,19 @@ initialSection: "signup"
         novalidate
       >
         <div id="mc_embed_signup_scroll">
-          <h2 class="p2">Subscribe</h2>
+          <p class="p2">Subscribe</p>
+          <p class="p1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
           <div class="p1 mc-field-group">
-            <label for="mce-EMAIL"
-              >Email Address <span class="asterisk">*</span>
-            </label>
             <input
               type="email"
               value=""
               name="EMAIL"
               class="required email"
               id="mce-EMAIL"
+              placeholder="Your email address"
             />
           </div>
           <div id="mce-responses" class="clear">
@@ -66,7 +68,7 @@ initialSection: "signup"
               value="Subscribe"
               name="subscribe"
               id="mc-embedded-subscribe"
-              class="p2 button --red-stroke"
+              class="p2 river-button --yellow-fill"
             />
           </div>
         </div>
